--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,94 +1,73 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+// box shadows
+// gradients
+// border radii
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+// colors
+$color-neutral-100: #fff;
+$color-neutral-900: #1f3049;
+$color-primary-400: #0066ff;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+// font-sizes
+$fs-900: 3.75rem; // 60px
+$fs-800: 3rem; // 48px
+$fs-600: 1.5rem; // 24px
+$fs-500: 1.3125rem; // 21px
+$fs-400: 1.125rem; // 18px
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+// font-weights
+$fw-400: 400;
+$fw-700: 700;
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
+// size/spacing values (Including the border-width)
+$size-8: 0.5rem;
+$size-12: 0.75rem; // (not in design)
+$size-16: 1rem;
+$size-20: 1.25rem;
+$size-32: 2rem;
+$size-36: 2.25rem;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+// simple reset
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  font: inherit;
 }
 
-html,
+// base styles
 body {
-  // font-family:
-  // background:
-  // color:
-  // margin:
-  // line-height: 1.5;
+  font-size: $fs-400;
+  font-weight: $fw-400;
+  color: $color-neutral-900;
+  background-color: $color-neutral-100;
+  // text-align: center;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+// composition classes
+.container {
+  width: min(100% - 2rem, 60rem);
+  margin-inline: auto;
+  // border: solid 2px red;
+}
+
+.center {
+  text-align: center;
+}
+
+// utiliy classes
+.header {
+  font-size: $fs-900;
+}
+
+.subheader {
+  font-size: $fs-600;
+}
+
+.text {
+  font-size: $fs-400;
 }
