--- a/styles/Search.module.scss
+++ b/styles/Search.module.scss
@@ -10,5 +10,15 @@
 .searchResults {
   background: variables.$color-neutral-100;
   color: variables.$color-neutral-900;
+}
+
+.searchResult {
+  list-style: none;
   padding: 0.5rem;
+
+  &:hover {
+    background: variables.$color-neutral-900;
+    color: variables.$color-neutral-100;
+    outline: solid 1px variables.$color-neutral-100;
+  }
 }
