add sass variables

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -25,3 +25,11 @@ $size-16: 1rem;
 $size-20: 1.25rem;
 $size-32: 2rem;
 $size-36: 2.25rem;
+
+// padding/margins
+$padding1: 0.5rem;
+$padding2: 1rem;
+$padding3: 2rem;
+
+// borders
+$border-thin: 1px solid $color-neutral-100;
