--- a/styles/Search.module.scss
+++ b/styles/Search.module.scss
@@ -1,10 +1,10 @@
 @use "variables";
 
 .input {
-  padding: 0.5rem;
+  padding: variables.$padding1;
   min-width: 25rem;
   border: none;
-  border-bottom: 1px solid variables.$color-neutral-900;
+  border-bottom: variables.$border-thin;
 }
 
 .searchResults {
@@ -14,7 +14,7 @@
 
 .searchResult {
   list-style: none;
-  padding: 0.5rem;
+  padding: variables.$padding1;
 
   &:hover {
     background: variables.$color-neutral-900;
