--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,6 +22,10 @@ body {
   // text-align: center;
 }
 
+li {
+  list-style: none;
+}
+
 // composition classes
 .container {
   width: min(100% - 2rem, 60rem);
