develop UI for movie results page

--- a/styles/Card.module.scss
+++ b/styles/Card.module.scss
@@ -1,6 +1,6 @@
 @use "variables";
+@use "mixins";
 
 .cardBlock {
-  padding: variables.$padding1;
-  border: variables.$border-thin;
+  @include mixins.cardBaseStyle;
 }
