Develop cards, update general layout mixin

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -8,6 +8,7 @@ $border-radius-10: 50px;
 // colors
 $color-neutral-100: #fff;
 $color-neutral-900: #1f3049;
+$color-neutral-1000: #05080d;
 $color-primary-400: #0066ff;
 
 // font-sizes
@@ -16,10 +17,12 @@ $fs-800: 3rem; // 48px
 $fs-600: 1.5rem; // 24px
 $fs-500: 1.3125rem; // 21px
 $fs-400: 1.125rem; // 18px
+$fs-300: 1rem; // 16px
 
 // font-weights
 $fw-400: 400;
 $fw-600: 600;
+$fw-700: 700;
 
 // size/spacing values (Including the border-width)
 $size-8: 0.5rem;
