--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -1,8 +1,12 @@
+@use "mixins";
+
 .layout {
+  @include mixins.gridBaseStyle;
+}
+
+.cardLayout {
+  @include mixins.gridBaseStyle;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 0.5rem;
-  width: min(100% - 2rem, 60rem);
-  margin-inline: auto;
-  min-height: 100vh;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  padding: 1.5rem 0;
 }
