--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -6,11 +6,11 @@
   flex-direction: column;
   justify-content: flex-end;
   padding: variables.$padding1;
-  border: variables.$border-thin;
+  // border: variables.$border-thin;
   border-radius: variables.$border-radius-1;
   background-color: variables.$color-neutral-100;
-  color: variables.$color-neutral-900;
-  min-height: 10rem;
+  color: variables.$color-neutral-1000;
+  min-height: 100%;
 
   & img {
     position: absolute;
@@ -19,9 +19,41 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    z-index: 1;
+    border-radius: inherit;
+    -webkit-mask-image: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 1)),
+      to(rgba(0, 0, 0, 0))
+    );
+    mask-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 1) 5rem,
+      rgba(0, 0, 0, 0) 12rem
+    );
   }
 
-  &:not(:first-child) {
+  & .cardText {
+    position: relative;
     z-index: 10;
+
+    &:nth-of-type(1) {
+      font-weight: variables.$fw-700;
+    }
+
+    &:nth-of-type(2) {
+      font-size: variables.$fs-300;
+    }
+    // color: variables.$color-neutral-100;
   }
+}
+
+@mixin gridBaseStyle {
+  display: grid;
+  gap: 1rem;
+  width: min(100% - 2rem, 60rem);
+  margin-inline: auto;
+  min-height: 100vh;
 }
