--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -12,11 +12,36 @@
   color: variables.$color-neutral-1000;
   min-height: 100%;
 
-  & img {
+  & .image {
+    // border: solid 2px red;
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+    border-radius: inherit;
+    -webkit-mask-image: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 1)),
+      to(rgba(0, 0, 0, 0))
+    );
+    mask-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 1) 5rem,
+      rgba(0, 0, 0, 0) 12rem
+    );
+  }
+
+  & .svg {
+    // border: solid 2px red;
+    position: absolute;
+    left: 25%;
+    top: 0;
+    // width: 100%;
     height: 100%;
     object-fit: cover;
     z-index: 1;
