--- a/styles/Search.module.scss
+++ b/styles/Search.module.scss
@@ -7,18 +7,6 @@
   border-bottom: variables.$border-thin;
 }
 
-.searchResults {
-  background: variables.$color-neutral-100;
-  color: variables.$color-neutral-900;
-}
-
-.searchResult {
-  list-style: none;
-  padding: variables.$padding1;
-
-  &:hover {
-    background: variables.$color-neutral-900;
-    color: variables.$color-neutral-100;
-    outline: solid 1px variables.$color-neutral-100;
-  }
+.button {
+  min-width: 100%;
 }
