--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -2,6 +2,11 @@
 
 .layout {
   @include mixins.gridBaseStyle;
+  min-height: 100vh;
+}
+
+.titleRow {
+  border: solid 2px white;
 }
 
 .cardLayout {
@@ -9,4 +14,5 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   padding: 1.5rem 0;
+  min-height: 18rem;
 }
