--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -14,6 +14,7 @@ $color-primary-400: #0066ff;
 // font-sizes
 $fs-900: 3.75rem; // 60px
 $fs-800: 3rem; // 48px
+$fs-700: 1.75rem; // 48px
 $fs-600: 1.5rem; // 24px
 $fs-500: 1.3125rem; // 21px
 $fs-400: 1.125rem; // 18px
