--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -11,7 +11,6 @@
 // Utility
 @mixin scrollXContainer {
   overflow-x: scroll;
-  border: solid 2px red;
 }
 
 // Block
@@ -25,7 +24,7 @@
   border-radius: variables.$border-radius-1;
   background-color: variables.$color-neutral-100;
   color: variables.$color-neutral-1000;
-  min-height: 100%;
+  min-height: 22rem;
 
   & .image {
     // border: solid 2px red;
@@ -46,19 +45,12 @@
     );
     mask-image: linear-gradient(
       to bottom,
-      rgba(0, 0, 0, 1) 5rem,
-      rgba(0, 0, 0, 0) 12rem
+      rgba(0, 0, 0, 1) 8rem,
+      rgba(0, 0, 0, 0) 23rem
     );
   }
 
   & .svg {
-    // border: solid 2px red;
-    position: absolute;
-    left: 25%;
-    top: 0;
-    // width: 100%;
-    height: 100%;
-    object-fit: cover;
     z-index: 1;
     border-radius: inherit;
     -webkit-mask-image: -webkit-gradient(
@@ -70,8 +62,8 @@
     );
     mask-image: linear-gradient(
       to bottom,
-      rgba(0, 0, 0, 1) 5rem,
-      rgba(0, 0, 0, 0) 12rem
+      rgba(0, 0, 0, 1) 8rem,
+      rgba(0, 0, 0, 0) 23rem
     );
   }
 
