--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -40,3 +40,6 @@ $padding3: 2rem;
 
 // borders
 $border-thin: 1px solid $color-neutral-900;
+
+// screen-width
+$standard-width: min(100% - 2rem, 78rem);
