--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -9,16 +9,19 @@
 
 .titleRow {
   padding: variables.$padding1;
+  overflow-x: hidden;
   & .titleRowHeader {
     font-size: variables.$fs-700;
   }
 }
 
 .cardLayout {
-  @include mixins.gridBaseStyle;
-  margin: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-flow: column;
+  grid-auto-columns: 250px;
+  gap: 1rem;
   padding: 1.5rem 0;
-  min-height: 18rem;
+  // min-height: 18rem;
+  overflow-x: scroll;
+  white-space: nowrap;
 }
