refactor Card & ScrollContainer to be gen purpose

--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -7,7 +7,7 @@
   padding: 3rem 0;
 }
 
-.titleRow {
+.scrollContainer {
   padding: variables.$padding1;
   overflow-x: hidden;
   & .titleRowHeader {
