--- a/styles/composition/Layout.module.scss
+++ b/styles/composition/Layout.module.scss
@@ -1,5 +1,5 @@
-@use "mixins";
-@use "variables";
+@use "$/styles/mixins";
+@use "$/styles/variables";
 
 .layout {
   @include mixins.gridBaseStyle;
@@ -23,4 +23,38 @@
   padding: 1.5rem 0;
   overflow-x: scroll;
   white-space: nowrap;
+}
+
+.titleIdInfoContainer {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: repeat(2, 1fr);
+
+  .imageWrapper {
+    max-height: 40rem;
+    position: relative;
+
+    img {
+      @include mixins.imageBaseStyle;
+    }
+  }
+
+  .infoContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: variables.$padding3;
+
+    .mainInfo {
+      display: flex;
+      justify-content: flex-start;
+      gap: 1rem;
+    }
+
+    .extendedInfo {
+      h2 {
+        margin-bottom: 0.3rem;
+      }
+    }
+  }
 }
