--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -18,21 +18,19 @@
 }
 
 // Block
-@mixin cardBaseStyle {
+@mixin cardBaseStyle($contentOrientation, $imagePosition) {
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: $contentOrientation;
   padding: variables.$padding1;
-  // border: variables.$border-thin;
   border-radius: variables.$border-radius-1;
   background-color: variables.$color-neutral-100;
   color: variables.$color-neutral-1000;
   min-height: 22rem;
 
-  & .image {
-    // border: solid 2px red;
-    position: absolute;
+  .primaryImage {
+    position: $imagePosition;
     @include imageBaseStyle;
     z-index: 1;
     border-radius: inherit;
@@ -50,33 +48,18 @@
     );
   }
 
-  & .svg {
-    z-index: 1;
-    border-radius: inherit;
-    -webkit-mask-image: -webkit-gradient(
-      linear,
-      left top,
-      left bottom,
-      from(rgba(0, 0, 0, 1)),
-      to(rgba(0, 0, 0, 0))
-    );
-    mask-image: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 1) 8rem,
-      rgba(0, 0, 0, 0) 23rem
-    );
-  }
-
-  & .cardText {
+  .cardInfoWrapper {
     position: relative;
     z-index: 10;
 
-    &:nth-of-type(1) {
-      font-weight: variables.$fw-700;
-    }
+    .cardText {
+      &:nth-of-type(1) {
+        font-weight: variables.$fw-700;
+      }
 
-    &:nth-of-type(2) {
-      font-size: variables.$fs-300;
+      &:nth-of-type(2) {
+        font-size: variables.$fs-300;
+      }
     }
   }
 }
