properly position svg on cards

--- a/styles/block/Card.module.scss
+++ b/styles/block/Card.module.scss
@@ -14,14 +14,14 @@
     @include mixins.cardBaseStyle(flex-start, relative);
 
     .svgWrapper {
-      outline: solid 1px red;
+      display: flex;
+      flex-grow: 1;
+      align-items: center;
     }
 
     .cardInfoWrapper {
-      outline: solid 2px green;
       display: flex;
       flex-direction: column;
-      flex-grow: 0.98;
       justify-content: flex-end;
     }
   }
