revert to useContext flow to reduce complexity

--- a/styles/block/Nav.module.scss
+++ b/styles/block/Nav.module.scss
@@ -4,6 +4,7 @@
 .nav {
   padding: variables.$padding2;
   border-bottom: solid 1px variables.$color-neutral-100;
+  height: variables.$nav-height;
 }
 
 .nav_options_wrapper {
