--- a/styles/composition/Layout.module.scss
+++ b/styles/composition/Layout.module.scss
@@ -3,7 +3,7 @@
 
 .layout {
   @include mixins.gridBaseStyle;
-  min-height: 100vh;
+  min-height: calc(100vh - variables.$nav-height);
   padding: 3rem 0;
 }
 
