--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -43,3 +43,6 @@ $border-thin: 1px solid $color-neutral-900;
 
 // screen-width
 $standard-width: min(100% - 2rem, 78rem);
+
+// fixed heights
+$nav-height: 3rem;
