--- a/styles/composition/Layout.module.scss
+++ b/styles/composition/Layout.module.scss
@@ -5,6 +5,7 @@
   @include mixins.gridBaseStyle;
   min-height: calc(100vh - variables.$nav-height);
   padding: 3rem 0;
+  position: relative;
 }
 
 .scrollContainer {
