--- a/styles/block/TitleIdInfo.module.scss
+++ b/styles/block/TitleIdInfo.module.scss
@@ -5,6 +5,7 @@
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: repeat(2, 1fr);
+  z-index: 2;
 
   .imageWrapper {
     max-height: 40rem;
