--- a/styles/block/Login.module.scss
+++ b/styles/block/Login.module.scss
@@ -18,6 +18,10 @@
     padding-bottom: 1rem;
     min-width: 90%;
 
+    .form_label {
+      margin-bottom: 0.2rem;
+    }
+
     &:nth-of-type(2) {
       padding-bottom: 2rem;
     }
