--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -42,7 +42,7 @@ $padding3: 2rem;
 $border-thin: 1px solid $color-neutral-900;
 
 // screen-width
-$standard-width: min(100% - 2rem, 78rem);
+$standard-width: min(100% - 5rem, 63rem + 5%);
 
 // fixed heights
 $nav-height: 3rem;
