--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -11,6 +11,10 @@ $color-neutral-900: #1f3049;
 $color-neutral-1000: #05080d;
 $color-primary-400: #0066ff;
 
+// opacity
+$opacity-500: 0.5;
+$opacity-700: 0.7;
+
 // font-sizes
 $fs-900: 3.75rem; // 60px
 $fs-800: 3rem; // 48px
