--- a/styles/block/Login.module.scss
+++ b/styles/block/Login.module.scss
@@ -45,7 +45,7 @@
       }
       &:nth-of-type(2) {
         place-self: end;
-        opacity: 0.7;
+        opacity: variables.$opacity-700;
         border: none;
       }
     }
