--- a/styles/block/Login.module.scss
+++ b/styles/block/Login.module.scss
@@ -1,4 +1,5 @@
 @use "$/styles/variables";
+@use "$/styles/mixins";
 
 .form_wrapper {
   display: flex;
@@ -32,17 +33,16 @@
     grid-auto-flow: column;
 
     .form_button {
-      background: none;
-      color: inherit;
-      border: solid 2px variables.$color-neutral-100;
-      padding: 0.4rem;
-      font: inherit;
-      outline: inherit;
-      border-radius: variables.$border-radius-1;
+      @include mixins.buttonBaseStyles(
+        variables.$color-neutral-100,
+        none,
+        inherit
+      );
 
       &:nth-of-type(1) {
         place-self: start;
       }
+
       &:nth-of-type(2) {
         place-self: end;
         opacity: variables.$opacity-700;
