--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -56,9 +56,9 @@ a {
   font-size: variables.$fs-700;
 }
 
-.text {
-  font-size: variables.$fs-400;
-}
+// .text {
+//   font-size: variables.$fs-400;
+// }
 
 // media-queries make as mixins
 /* Portrait and Landscape */
